<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/settings_radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/radio_group_header"/>
        <RadioButton
            android:id="@+id/radio_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_rated"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/radio_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/radio_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/radio_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:textSize="20sp"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>